Setup restdocs