@@ -21,11 +21,6 @@
 
         <dependency>
             <groupId>me.ap.tools</groupId>
-            <artifactId>tools-lang</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>me.ap.tools</groupId>
             <artifactId>tools-jackson</artifactId>
         </dependency>
 
@@ -60,6 +55,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.restdocs</groupId>
+            <artifactId>spring-restdocs-mockmvc</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.11.0-M1</version>
@@ -74,9 +75,37 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments> -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 </jvmArguments>
+                    <!-- allow debug and JVM agents dynamic loading (Spring's proxies, AspectJ, ...) -->
+                    <jvmArguments> -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -XX:+EnableDynamicAgentLoading</jvmArguments>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctor-maven-plugin</artifactId>
+                <version>1.5.8</version>
+                <executions>
+                    <execution>
+                        <id>generate-docs</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>process-asciidoc</goal>
+                        </goals>
+                        <configuration>
+                            <backend>html</backend>
+                            <doctype>book</doctype>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.springframework.restdocs</groupId>
+                        <artifactId>spring-restdocs-asciidoctor</artifactId>
+                        <version>${spring-restdocs.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
         </plugins>
     </build>
 
